Added html script for logi page using bootstrap

--- a/train40/src/app/home/login/login.component.html
+++ b/train40/src/app/home/login/login.component.html
@@ -1,1 +1,73 @@
-<p id="para">login works!</p>
+<div class="row">
+    <div class="col-md-4 float-end ms-2 mt-5 me-5">
+        <div class="card shadow pt-3 pb-3 ps-3 pe-3">
+            <img src="/assets/img/train1.jpg" alt="logo">
+        </div>
+    </div>
+        
+    <div class="col-md-6 float-end mt-5 me-3">
+        <div class="card shadow pt-3 pb-3 ps-3 pe-3">
+            <form>
+                <!-- Email input -->
+                <div class="form-outline mb-4">
+    
+                    <label class="form-label" for="form2Example1"><b>Email address</b></label>
+                    <input type="email" id="form2Example1" class="form-control" />
+    
+                </div>
+    
+                <!-- Password input -->
+                <div class="form-outline mb-4">
+    
+                    <label class="form-label" for="form2Example2"><b>Password</b></label>
+                    <input type="password" id="form2Example2" class="form-control" />
+    
+                </div>
+    
+                <!-- 2 column grid layout for inline styling -->
+                <div class="row mb-4">
+                    <div class="col d-flex justify-content-center">
+                        <!-- Checkbox -->
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
+                            <label class="form-check-label" for="form2Example31"> Remember me </label>
+                        </div>
+                    </div>
+    
+                    <div class="col">
+                        <!-- Simple link -->
+                        <a href="#!">Forgot password?</a>
+                    </div>
+                </div>
+    
+                <!-- Submit button -->
+                <div class="text-center">
+                    <button type="button" class="btn btn-primary btn-block mb-4 ">Sign in</button>
+                </div>
+    
+                <!-- Register buttons -->
+                <div class="text-center">
+                    <p>Not a member? <a href="#!">Register</a></p>
+                    <p>or sign up with:</p>
+                    <button type="button" class="btn btn-link btn-floating mx-1">
+                        <i class="fab fa-facebook-f"></i>
+                    </button>
+    
+                    <button type="button" class="btn btn-link btn-floating mx-1">
+                        <i class="fab fa-google"></i>
+                    </button>
+    
+                    <button type="button" class="btn btn-link btn-floating mx-1">
+                        <i class="fab fa-twitter"></i>
+                    </button>
+    
+                    <button type="button" class="btn btn-link btn-floating mx-1">
+                        <i class="fab fa-github"></i>
+                    </button>
+                </div>
+            </form>
+    
+        </div>
+    </div>
+
+</div>
