--- a/train40/src/app/home/login/login.component.html
+++ b/train40/src/app/home/login/login.component.html
@@ -42,7 +42,7 @@
     
                 <!-- Submit button -->
                 <div class="text-center">
-                    <button type="button" class="btn btn-primary btn-block mb-4 ">Sign in</button>
+                    <button type="button" class="btn btn-primary btn-block mb-4 " (click) = "login()">Sign in</button>
                 </div>
     
                 <!-- Register buttons -->
