--- a/train40/src/app/home/login/login.component.html
+++ b/train40/src/app/home/login/login.component.html
@@ -7,12 +7,12 @@
         
     <div class="col-md-6 float-end mt-5 me-3">
         <div class="card shadow pt-3 pb-3 ps-3 pe-3">
-            <form>
+            <form [formGroup]="loginForm">
                 <!-- Email input -->
                 <div class="form-outline mb-4">
     
                     <label class="form-label" for="form2Example1"><b>Email address</b></label>
-                    <input type="email" id="form2Example1" class="form-control" />
+                    <input type="email" placeholder="Enter your email" id="email" name="email" class="form-control" formControlName="email" />
     
                 </div>
     
@@ -20,7 +20,7 @@
                 <div class="form-outline mb-4">
     
                     <label class="form-label" for="form2Example2"><b>Password</b></label>
-                    <input type="password" id="form2Example2" class="form-control" />
+                    <input type="password" placeholder="Enter your password" id="password" name="password" class="form-control" formControlName="password" />
     
                 </div>
     
